fix IDE warnings (and some bugs)